<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/prof2"
    android:gravity="center"
    android:orientation="vertical"
    >

    <!--SingIN-->
    <RelativeLayout
        android:id="@+id/GSignin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        android:visibility="visible" >

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signin"
            android:text="@string/l_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textSize="25dp"

            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="60dp" />

    </RelativeLayout>

    <!--Profile-->
    <LinearLayout
        android:id="@+id/GProfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@drawable/prof">

        <com.github.siyamed.shapeimageview.CircularImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:siBorderWidth="3dp"
            app:siBorderColor="#ffffff"/>



        <TextView
            android:id="@+id/pCity"
            android:drawableLeft="@drawable/loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:fontFamily="san-serif-thin"
            />
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:fontFamily="san-serif-thin"
            />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="2">
        <Button
            android:id="@+id/mainlandmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:text="@string/l_landmark"
            android:textSize="18dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:fontFamily="san-serif-thin"
            >
        </Button>
        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:onClick="logout"
            android:padding="15dp"
            android:text="@string/l_logout"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:fontFamily="san-serif-thin"
            android:background="@drawable/button">
        </Button>
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>